--- a/css/utilities.css
+++ b/css/utilities.css
@@ -13,3 +13,12 @@
     align-items: center;
     justify-content: flex-start;
 }
+
+.text-justify {
+    text-align: justify;
+}
+
+input {
+    padding: 10px;
+    margin: 10px;
+}
